src/components/Profile/Profile.css
.profile__container {
  height: 150%;
}

.profile__header-container {
  display: flex;
}

.profile__profile-picture,
#uploaded-profile-picture {
  position: absolute;
  left: 00px;
  top: 0;
  z-index: -1;
  width: 100%;
  height: 200px;
  object-fit: cover;
}

.profile__name-box {
  position: absolute;
  /* dark 500 */
  background-color: #161616;
  left: 32px;
  top: 170px;
  width: 235px;
  height: 200px;
  align-items: center;
  padding: 30px;
  border-radius: 15px;
}

.profile__name-box span {
  color: #9d9d9d;
  font-size: 14px;
  line-height: 1.4;
  padding: 5px;
  background: #202020;
  border-radius: 5px;
  height: 18px;
  margin-bottom: 10px;
}

.profile__span-age-city {
  display: flex;
  align-items: center;
  justify-content: center;
  justify-content: space-around;
  width: 235px;
}

.profile__span-container {
  display: flex;
  align-items: center;
  justify-content: center;
  justify-content: space-around;
  width: 235px;
  flex-wrap: wrap;
}

.profile__span-container span {
  color: white !important;
}

.profile__span-container-big {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  justify-content: space-around;
}

.profile__span-container-big span {
  color: #ffcb1f;
}

.profile__name-box > h2 {
  color: white;
  font-size: 26px;
  font-weight: bold;
}

.profile__name-box > h3 {
  color: white;
  padding: 16px;
  font-size: 12px;
}

.profile__name-box h4 {
  color: #9d9d9d;
  padding: 8px;
  font-size: 16px;
}

.profile__info-container {
  display: none;
  position: relative;
  top: 300px;
}

#profile__likes-container,
#profile__matches-container {
  position: absolute;
  top: 450px;
  left: 15px;
  width: 90%;
}

#profile__matches-container {
  margin-top: 25px;
}

#profile__matches-container {
  top: 600px;
}

.profile__text-container {
  display: grid;
  grid-template-columns: 100px 200px 30px;
  width: 99%;
  padding-bottom: 20px;
}

.profile__text-container p {
  text-align: right;
}

.profile__text-container span {
  text-align: left;
}

.profile__footer {
  position: absolute;
  top: 810px;
  width: 90%;
  padding-bottom: 150px;
  text-align: start;
}

.profile__footer-text {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  padding: 2px;
  left: 15px;
  position: relative;
}

.profile__footer > h1 {
  padding: 5px;
  padding-left: 15px;
  font-family: Inter;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 145%;
}

.profile__horizontal-line {
  position: relative;
  left: 15px;
  height: 0;
  border: 1px solid #202020;
}

.profile__show-all {
  font-size: small;
  color: 9d9d9d;
}

.profile__header {
  display: grid;
  grid-template-columns: 30% 30% 30%;
  grid-template-rows: 100px;
  position: relative;
}

.profile__settings {
  position: fixed !important;
  top: 30px;
  left: 5%;
  z-index: 2;
  background: #202020;
  opacity: 0.5;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 40px;
  width: 40px;
  border-radius: 30px;
}

.profile__logout {
  position: fixed !important;
  top: 35px;
  right: 3%;
  z-index: 2;
  cursor: pointer;
  background: #202020;
  opacity: 0.5;
  display: flex;
  font-size: 14px;
  align-items: center;
  justify-content: center;
  height: 30px;
  width: 80px;
  border-radius: 30px;
}

.profile__avatar-container {
  position: absolute !important;
  top: 0;
  z-index: -1;
  align-items: center;
  justify-content: center;
  justify-items: center;
}

.profile__likes-picture,
.profile__matches-picture {
  height: 120px;
  width: 100px;
  border-radius: 15px;
  margin-left: 5px;
  object-fit: cover;
}

.profile__likes-container {
  display: grid;
  grid-template-columns: repeat(3, auto);
}

#profile__liked-movies-container {
  display: table;
  justify-content: start;
}

#profile__liked-movies-container .profile__likes-picture {
  width: 60px;
  height: 60px;
}

.profile__movies-list {
  display: flex;
  padding: 5px;
  margin-bottom: 100px;
}

.profile__listed-movie-container {
  display: flex;
  /* font-family: Inter; */
}

.profile__listed-movie {
  position: relative;
  padding: 5px;
  height: 60px;
  display: block;
}

.profile__listed-movie-name {
  position: relative;
  padding: 5px;
  height: 60px;
  display: block;
  text-align: start;
  top: 7px;
}

.profile__listed-movie-name span {
  font-size: small;
  padding-right: 5px;
  color: grey;
}

.profile__back-bttn {
  position: fixed;
  right: 20px;
  top: 20px;
}

.profile__edit-likes-friends {
  padding-left: 20px;
  }

.profile__edit-containter {
  display: absolute;
  align-items: left;
  padding-left: 20px;
  width: 320px;
}

.profile__edit-containter input {
  background: #202020;
  color: white;
  font-size: 18px;
  width: 100%;
}

.profile__edit-footer {
  height: 86px;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 20px;
  font-weight: bold;
}

#profile__edit-picture-container {
  display: flex;
  align-items: center;
  justify-content: center;
}

#profile__edit-picture {
  position: relative;
  display: flex;
  align-items: flex-end;
  justify-content: flex-end;
  height: 100px;
  width: 100px;
  background-color: blue;
  border-radius: 10px;
}

.profile__edit-span-container {
  display: flex;
  align-items: center;
  justify-content: center;
  justify-content: space-around;
  width: 300px;
  flex-wrap: wrap;
}

.profile__edit-span-container span {
  color: #ffcb1f !important;
}

.profile__edit-label-input {
  display: flex;
  padding: 10px;
  padding-right: 20px;
  margin-top: 15px;
  margin-bottom: 15px;
  background: rgba(5, 5, 5, 0.25);
  border-radius: 10px;
}

.profile__bttn{
  background: #EE6258;

  border-radius: 8px;
  width: 245px;
  height: 56px;
  left: 56px;
  bottom: 397px;
  color: white;
}

.profile__edit-likes-friends {
  margin-bottom: 150px;
  margin-top: 15px;
  text-align: start;
}

.profile__edit-grid {
  display: flex;
  justify-content: space-between;
  padding-right: 20px;
  padding-bottom: 5px;
  align-items: center;
}

.profile__p-text {
  padding: 10px;
}

.profile__edit-containter label {
  padding-right: 5px;
  margin-right: 5px;
}

.profile__edit__age-select-wrapper .profile__edit__age-select {
  /* border: solid 2px green; */
  position: relative;
  display: flex;
  flex-direction: row;
  align-items: center;
  width: 300px;
  height: 21px;
  color: white;
  font-size: 16px;
  font-family: inherit;
}

#profile__edit-inputlabel {
  /* border: solid 2px blue; */
  color: white;
  position: static;
  transform: none;
  font-size: 16px;
  font-family: inherit;
}

/* BEETWEEN INPUT */
.profile__edit__age-select-wrapper
  .MuiInputBase-root.MuiInput-root.MuiInput-underline.MuiInputBase-formControl.MuiInput-formControl {
  /* border: solid 2px red; */
  color: white;
  height: 26px;
  font-size: 18px;
  top: -7px;
  background: rgb(80, 49, 49);
  padding: 8px;
  font-size: 16px;
  font-family: inherit;
}

/* age range */
.MuiInputBase-root.MuiInput-root.MuiInput-underline.MuiInputBase-formControl.MuiInput-formControl {
  width: 196px;
  font-family: inherit;
  color: #d4d4d4;
}

/* Dropdown list */
.MuiList-root.MuiMenu-list.MuiList-padding {
  background: rgb(144, 192, 180);
  font-size: 16px;
  font-family: inherit;
}

.profile__edit-current-filters {
  background: rgba(5, 5, 5, 0.25);
  align-items: center;
  padding: 10px;
  border-radius: 15px;
}

.profile__edit-current-filters h4 {
  padding-bottom: 15px;
}

.profile__edit-current-filters span {
  color: #9d9d9d;
  background: #202020;
  font-size: 14px;
  padding: 5px;
  border-radius: 5px;
  height: 18px;
  margin-bottom: 10px;
}

.liked_movies__container {
  padding-bottom: 150px;
}

.liked_movies__all {
  display: grid;
  grid-template-columns: 100px auto 30px;
  grid-template-rows: 90px 90px;
}

.liked_movies__thumbnail {
  width: 70px;
  height: 80px;
  border-radius: 15px;
  margin-left: 15px;
  margin-bottom: 10px;
  object-fit: cover;
}

.liked_movies__text-container {
  display: grid;
  justify-self: start;
  text-align-last: left;
}

.liked_movies__text-container p {
  display: flex;
  align-items: center;
  font-size: 18px;
  color: gray;
}

.liked_movies__text-container div {
  font-size: 14px;
  text-align: start;
}


.liked_movies__circle {
  display: flex;
  align-items: center;
}
/* 
.liked_movies__year-match {
display: grid;
grid-template-columns: 70px 100px;
}

.canvas {
  background: #fff;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
  display: block;
  margin: 0 auto;
}

.single-image {
  width: 50px;
} */

.profile__upload-div {
  height: 30px;
}

.profile__image-cropper {
  position: relative;
  top: -250px;
  left: 90px;
  z-index: 3;
  width: 180px;
  height: 180px;
  overflow: hidden;
  border-radius: 50%;
}

#profile__circle_image {
  display: inline;
  margin: 0 auto;
  height: 130%;
  width: auto;
}

.profile__edit-file-uploader {
   position: relative;
}

.profile__upload_symbol_position {
  position: relative;
  display:flex;
  /* align-items: center; */
  justify-content: center;
  top: -40px;
   left: 130px;
   z-index: 4;
   border: red 3px solid;
     background-color: rgb(77, 65, 65);
     border-radius: 50px;
     opacity: 0.5;
     width: 50px;
}

.profile__upload-label {
   border: blue 3px solid;
  cursor: pointer;
  display: flex;
  flex-direction: row-reverse;
}

#profile__upload-icon {
  position: fixed;
  left: 20px;
  background-color: grey;
   border: green 3px solid;
}

.profile__upload_symbol_position 
input {
z-index: 5!important;
visibility: hidden; 
 border: yellow 3px solid;


.profile__filterPage {
  position: relative;
  overflow: hidden;
  width: 100vw;
  display: flex;
  align-items: center;
  justify-content: center;
}

